--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+def githubProperties = new Properties()
+githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+
 buildscript {
     ext.kotlin_version = '1.3.71'
     repositories {
@@ -20,9 +23,24 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            name = "GitHubPackages"
+            /*  Configure path to the library hosted on GitHub Package Registry
+             *  Replace UserID with package owner userID and REPOSITORY with the repository name
+             *  e.g. "https://maven.pkg.github.com/enefce/AndroidLibraryForGitHubPackagesDemo"
+             */
+            url = uri("https://maven.pkg.github.com/mycujoo/mls-android")
+
+            credentials {
+                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
+                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+            }
+        }
         
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
