--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'tv.mycujoo.libraries:mls:1.0.1-alpha15'
+    implementation 'com.github.mycujoo:mls-android:1.0.1-alpha24'
 
 }
