--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.kotlin_version = '1.3.71'
     repositories {
         google()
+        mavenCentral()
         jcenter()
         
     }
@@ -22,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
